--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,14 +5,10 @@ jobs:
   PrereqChecker:
     runs-on: windows-2019
     steps:
-    - uses: actions/checkout@v1
-    - name: Setup Nuget
-      uses: nuget/setup-nuget@v1.0.2
-      with:
-        nuget-version: 'latest'
-    - name: Restore packages
-      run: nuget restore PrereqChecker.sln
+    - uses: actions/checkout@v2
     - name: Setup MSBuild.exe
-      uses: microsoft/setup-msbuild@v1.0.0
+      uses: microsoft/setup-msbuild@v1.0.2
+    - name: Restore packages
+      run: msbuilt /t:restore PrereqChecker.sln
     - name: Build with MSBuild
       run: msbuild PrereqChecker.sln
