--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,6 +9,6 @@ jobs:
     - name: Setup MSBuild.exe
       uses: microsoft/setup-msbuild@v1.0.2
     - name: Restore packages
-      run: msbuilt /t:restore PrereqChecker.sln
+      run: msbuild /t:restore PrereqChecker.sln
     - name: Build with MSBuild
       run: msbuild PrereqChecker.sln
